# gerbosari

./: CLAUDE.md  README.md  desa_gerbosari.docx  instruksi.md
.claude/: settings.json
backend/: .env.example  Cargo.toml  README.md
backend/migrations/: 20260101000001_create_galeri.sql  20260101000002_create_penduduk_ringkasan.sql  20260101000003_create_lowongan.sql  20260101000004_create_berita.sql  20260101000005_seed_initial_data.sql  20260518000001_refresh_lowongan_deadlines.sql  20260518000002_create_admin_users.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs
backend/src/application/: auth_service.rs  berita_service.rs  galeri_service.rs  lowongan_service.rs  mod.rs  penduduk_service.rs
backend/src/domain/: admin_user.rs  auth.rs  berita.rs  galeri.rs  lowongan.rs  mod.rs  penduduk.rs  repository.rs
backend/src/infrastructure/: auth.rs  db.rs  mod.rs  rate_limit.rs
backend/src/infrastructure/persistence/: admin_user_repo.rs  berita_repo.rs  galeri_repo.rs  lowongan_repo.rs  mod.rs  penduduk_repo.rs
backend/src/presentation/: mod.rs  router.rs  state.rs
backend/src/presentation/dto/: auth_dto.rs  berita_dto.rs  galeri_dto.rs  lowongan_dto.rs  mod.rs  penduduk_dto.rs
backend/src/presentation/handlers/: auth.rs  berita.rs  galeri.rs  health.rs  lowongan.rs  mod.rs  penduduk.rs  upload.rs
backend/src/presentation/middleware/: jwt.rs  mod.rs
content/: README.md
deploy/: .env.production.example  README.md  aapanel-setup.md  aws-setup.md  gerbosari-backend.service  nginx.conf
frontend/: .env.example  .gitignore  README.md  index.html  (+6 more)
(+91 files in other folders)
